added cards pros

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
   <title>Conflictos con Git 🤡</title>
 </head>
 <body>
-  <h1>No más</h1>
+  <h1>Nav</h1>
+  <h1>Cards</h1>
+  <!-- cards_gio -->
+  <a href="#" alt="Mythrill" target="_blank">
+    <div class="card">
+      <div class="wrapper">
+        <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-cover.jpg" class="cover-image" />
+      </div>
+      <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-title.png" class="title" />
+      <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-character.webp" class="character" />
+    </div>
+  </a>
+  <a href="#" alt="Mythrill" target="_blank">
+    <div class="card">
+      <div class="wrapper">
+        <img src="https://ggayane.github.io/css-experiments/cards/force_mage-cover.jpg" class="cover-image" />
+      </div>
+      <img src="https://ggayane.github.io/css-experiments/cards/force_mage-title.png" class="title" />
+      <img src="https://ggayane.github.io/css-experiments/cards/force_mage-character.webp" class="character" />
+    </div>
+    <!-- fin cards gio -->
+  </a>
 </body>
 </html>
