--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <title>Conflictos con Git 🤡</title>
 </head>
 <body>
   <h1>Nav</h1>
   <h1>Cards</h1>
-  <!-- cards_gio -->
-  <a href="#" alt="Mythrill" target="_blank">
+  <a href="#" alt="Mythrill">
     <div class="card">
       <div class="wrapper">
         <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-cover.jpg" class="cover-image" />
@@ -18,7 +18,8 @@
       <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-character.webp" class="character" />
     </div>
   </a>
-  <a href="#" alt="Mythrill" target="_blank">
+  
+  <a href="#" alt="Mythrill">
     <div class="card">
       <div class="wrapper">
         <img src="https://ggayane.github.io/css-experiments/cards/force_mage-cover.jpg" class="cover-image" />
@@ -26,7 +27,6 @@
       <img src="https://ggayane.github.io/css-experiments/cards/force_mage-title.png" class="title" />
       <img src="https://ggayane.github.io/css-experiments/cards/force_mage-character.webp" class="character" />
     </div>
-    <!-- fin cards gio -->
   </a>
 </body>
 </html>
