--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conflictos con Git 🤡</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>No más</h1>
-  <h1>Esto es un ...</h1>
+  
+  <div class="cards-team">
+    <div class="card-jhoan">
+      <h2>Jhoan Gomez</h2>
+      <img class="imagen-raccoon" src="raccoon.jpg" alt="raccon nojao">
+      <p class="parrafo">Un raccoon enojado, simplemente impresionante</p>
+    </div>
+  </div>
 </body>
 </html>
