--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>No más</h1>
   
+  <!-- Card jhoan -->
   <div class="cards-team">
     <div class="card-jhoan">
       <h2>Jhoan Gomez</h2>
@@ -16,5 +17,7 @@
       <p class="parrafo">Un raccoon enojado, simplemente impresionante</p>
     </div>
   </div>
+
+  <!-- Fin card jhoan -->
 </body>
 </html>
