added cards pros new styles

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <!-- inicio Card movie -->
-  <div class="card-movie">movie Card</div>
+  <div class="card-gio-movie">movie Card</div>
   <!-- fin Card movie -->
   <h2>Nav</h2>
   <!-- inicio Card Mythrill -->
   <h1>Cards</h1>
   <a href="#" alt="Mythrill">
-    <div class="card">
+    <div class="card-gio">
       <div class="wrapper">
         <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-cover.jpg" class="cover-image" />
       </div>
@@ -25,7 +25,7 @@
   </a>
   <!-- fin Card Mythrill -->
   <a href="#" alt="Mythrill">
-    <div class="card">
+    <div class="card-gio">
       <div class="wrapper">
         <img src="https://ggayane.github.io/css-experiments/cards/force_mage-cover.jpg" class="cover-image" />
       </div>
