--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 
   </div>
   <!-- Fin Card Ana -->
-
+<!-- 
+Inicio card mateo -->
+<div class="card-mateo" style="display: flex; flex-direction: column; width: 600; background-color: midnightblue; justify-content: center; align-items: center;  " >
+  <h1 style="color: yellow;">Aprendiendo Github</h1>
+  <img src="./fondomateo.jpg" alt="fondo card" width="400">
+  <p style="display: flex; justify-content: center; align-items: center; text-align: center; color: white;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates incidunt quasi odit, laudantium impedit minus perferendis obcaecati neque excepturi praesentium?</p>
+</div>
+<!-- 
+fin card mateo -->
 </body>
 </html>
